# todo-rust

./: Cargo.toml
migrations/: V2__add.sql
src/: app.rs  db.rs  main.rs  task.rs
